# binance-notificator-bot

./: Cargo.toml
src/: main.rs
