[package]
name = "binance-notificator-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
anyhow = "1.0.41"
teloxide = "0.4.0"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
