[package]
name = "binance-notificator-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
anyhow = "1.0.41"
reqwest = "0.11.4"
serde_json = "1.0.64"
pretty_env_logger = "0.4.0"
teloxide = { version = "0.4.0", features = ["auto-send", "macros"] }
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }